tests/functionalTests/valid/code/varInNestedDo.hs
main :: IO ();
main = do {
    x <- return 15;
    do {
        putInt x;
    };
};