tests/functionalTests/invalid/code/variableOutOfScope.hs
main :: IO ();
main = do {
    do {
        x <- return 12;
    };
    putInt x;
};